src/objects/Resolution_Partner__c.object
<CustomObject>
    <fields>
        <fullName>CPM_Project_Details__c</fullName>
        <label>CPM Project Details</label>
        <referenceTo>Project_Details__c</referenceTo>
        <relationshipLabel>Resolution Partners</relationshipLabel>
        <relationshipName>Resolution_Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aged Justification</fullName>
                </value>
                <value>
                    <fullName>Contract/System Issue</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Extended Pend Outreach</fullName>
                </value>
                <value>
                    <fullName>Interest Information</fullName>
                </value>
                <value>
                    <fullName>Internal Claim Adjustment</fullName>
                </value>
                <value>
                    <fullName>Project Parameters</fullName>
                </value>
                <value>
                    <fullName>Project Root Cause</fullName>
                </value>
                <value>
                    <fullName>BCO (Benefit Config) Inquiry - C&amp;S</fullName>
                    <isActive>false</isActive>
                    <label>BCO (Benefit Config) Inquiry - C&amp;S</label>
                </value>
                <value>
                    <fullName>CCI, DRM, EMPTORIS Inquiry - NICE</fullName>
                    <isActive>false</isActive>
                    <label>CCI, DRM, EMPTORIS Inquiry - NICE</label>
                </value>
                <value>
                    <fullName>CCM Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>CCM Inquiry</label>
                </value>
                <value>
                    <fullName>COB Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>COB Inquiry</label>
                </value>
                <value>
                    <fullName>CSU Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>CSU Inquiry</label>
                </value>
                <value>
                    <fullName>Clinical Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Inquiry</label>
                </value>
                <value>
                    <fullName>Contract Clarification - NICE</fullName>
                    <isActive>false</isActive>
                    <label>Contract Clarification - NICE</label>
                </value>
                <value>
                    <fullName>Customer Advocate Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Customer Advocate Inquiry</label>
                </value>
                <value>
                    <fullName>ERO (iCES/Reimbursement) Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>ERO (iCES/Reimbursement) Inquiry</label>
                </value>
                <value>
                    <fullName>EWS Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>EWS Inquiry</label>
                </value>
                <value>
                    <fullName>Eligibility Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Eligibility Inquiry</label>
                </value>
                <value>
                    <fullName>HOV Indexing - NICE</fullName>
                    <isActive>false</isActive>
                    <label>HOV Indexing - NICE</label>
                </value>
                <value>
                    <fullName>Hospital Facility Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Hospital Facility Inquiry</label>
                </value>
                <value>
                    <fullName>IT Ticket (C&amp;S)</fullName>
                    <isActive>false</isActive>
                    <label>IT Ticket (C&amp;S)</label>
                </value>
                <value>
                    <fullName>MPI (Medical Payment) Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>MPI (Medical Payment) Inquiry</label>
                </value>
                <value>
                    <fullName>Medical Management Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Medical Management Inquiry</label>
                </value>
                <value>
                    <fullName>NDM Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>NDM Inquiry</label>
                </value>
                <value>
                    <fullName>Network Management Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Network Management Inquiry</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>PCRL (formerly CCI) Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>PCRL (formerly CCI) Inquiry</label>
                </value>
                <value>
                    <fullName>PCSU Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>PCSU Inquiry</label>
                </value>
                <value>
                    <fullName>PRISM Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>PRISM Inquiry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Referral_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Referral #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Response_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Follow Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reason_for_Outreach__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Outreach</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Partner__c</fullName>
        <label>Resolution Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A.C.N. Inquiry</fullName>
                </value>
                <value>
                    <fullName>APC Pricing</fullName>
                </value>
                <value>
                    <fullName>ART – Accounts Receivable Team</fullName>
                </value>
                <value>
                    <fullName>Back End CRT Follow Up</fullName>
                </value>
                <value>
                    <fullName>BCCI Inquiry - M&amp;R</fullName>
                </value>
                <value>
                    <fullName>BCO (Benefit Config) Inquiry - C&amp;S</fullName>
                </value>
                <value>
                    <fullName>BOSS Adjustments</fullName>
                </value>
                <value>
                    <fullName>CAP Team - NICE</fullName>
                </value>
                <value>
                    <fullName>CCI, DRM, EMPTORIS Inquiry - NICE</fullName>
                </value>
                <value>
                    <fullName>CCM Inquiry</fullName>
                </value>
                <value>
                    <fullName>Claim Impact Report Request</fullName>
                </value>
                <value>
                    <fullName>Clinical Inquiry</fullName>
                </value>
                <value>
                    <fullName>COB Inquiry</fullName>
                </value>
                <value>
                    <fullName>Contract Clarification - NICE</fullName>
                </value>
                <value>
                    <fullName>CPM Back End Review</fullName>
                </value>
                <value>
                    <fullName>CPM Front End Review</fullName>
                </value>
                <value>
                    <fullName>CPM Supervisor/Team Lead Review</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>CRT-Re-review</fullName>
                </value>
                <value>
                    <fullName>CSP Retrigger Request</fullName>
                </value>
                <value>
                    <fullName>CSU Inquiry</fullName>
                </value>
                <value>
                    <fullName>Customer Advocate Inquiry</fullName>
                </value>
                <value>
                    <fullName>Eligibility Inquiry</fullName>
                </value>
                <value>
                    <fullName>ERO (iCES/Reimbursement) Inquiry</fullName>
                </value>
                <value>
                    <fullName>EWS Inquiry</fullName>
                </value>
                <value>
                    <fullName>HNS/Viant Pricing - NICE</fullName>
                </value>
                <value>
                    <fullName>Interest Validation</fullName>
                </value>
                <value>
                    <fullName>Investigation &amp; Solutions Group</fullName>
                </value>
                <value>
                    <fullName>IT Ticket (C&amp;S)</fullName>
                </value>
                <value>
                    <fullName>M&amp;R Governance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resolution Partner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>CPM_Project_Details__c</columns>
        <columns>NAME</columns>
        <columns>Reason_for_Outreach__c</columns>
        <columns>Category__c</columns>
        <columns>Resolution_Partner__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Name__c</columns>
        <columns>Follow_Up__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Response_Received__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Follow_Up__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Open Resolution Partner</label>
        <sharedTo>
            <roleAndSubordinatesInternal>PIR_CPM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RP-{000000000}</displayFormat>
        <label>Resolution Partner Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resolution Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>